--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
          version="3.1">
 
     <welcome-file-list>
-        <welcome-file>/WebContent/index.jsp</welcome-file>
+        <welcome-file>WebContent/index.jsp</welcome-file>
     </welcome-file-list>
 <!--配置全局监听-->
     <context-param>
