--- a/pom.xml
+++ b/pom.xml
@@ -214,6 +214,11 @@
             <artifactId>poi-ooxml</artifactId>
             <version>3.15</version>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.14.3</version>
+        </dependency>
     </dependencies>
 
     <build>
