--- a/src/main/config/db.properties
+++ b/src/main/config/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/parkingsystem
+jdbc.url=jdbc:mysql://localhost:3306/parkingsystem?useUnicode=true&characterEncoding=UTF-8
 jdbc.user=root
 jdbc.password=gxh1995
